# xrootd-cephfs

./: CMakeLists.txt  README  README.md
cmake/: FindCeph.cmake
src/: CMakeLists.txt  CephOss.cc  CephOss.hh  CephOssDir.cc  CephOssDir.hh  CephOssFile.cc  CephOssFile.hh  CephfsOss.cc  CephfsOss.hh  CephfsOssDir.cc  CephfsOssDir.hh  CephfsOssFile.cc  CephfsOssFile.hh
